# django-boilerplate

./: .coveragerc  .gitignore  Dockerfile  LICENSE  README.md  Starter.md  docker-compose.deploy.yaml  docker-compose.yaml  kustomization.yaml  manage.py  pyproject.toml  pytest.ini  setup.sh
.github/workflows/: django.yml  docker-image.yml  google.yml
app_common/: models.py
app_django/: settings.py  tests.py  urls.py
app_user/: apps.py  managers.py  models.py  serializers.py
app_user/migrations/: 0001_initial.py
django_boilerplate/: asgi.py  settings.py  tests.py  urls.py  wsgi.py
docker/: run-local.sh  run.sh
docs/: Starter.md  initialization.md
docs/google-cloud/: gcloud.md  secrets.md
kubernetes/: config.yaml  deployment.yaml  postgres.yaml  service.yaml
setup/: readme-template.md
