[tool.poetry]
name = "django_boilerplate"
version = "0.1.0"
description = ""
authors = ["Yahya Bedirhan Pak <y.bedirhanpak@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"
pytest-django = "^3.9.0"
djangorestframework = "^3.11.1"
gunicorn = "^20.0.4"
whitenoise = "^5.2.0"
psycopg2-binary = "^2.8.5"
python-dotenv = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pytest-cov = "^2.10.1"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
